--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	transition: all .3s ease;
+	transition: all .4s ease-in;
 	z-index: 2;
 }
 
@@ -27,7 +27,10 @@
 #header-spacer {
 	display: relative;
 	width: 100vw;
-	height: 133px;
+	height: 180px;
+	@media(min-width: 768px){
+		height: 133px;
+	}
 	@media(min-width: 992px){
 		height: 232px;
 	}
