--- a/scss/partials/_nav_bar.scss
+++ b/scss/partials/_nav_bar.scss
@@ -79,6 +79,7 @@
 }
 
 .horizontal-list{
+  left: 0;
   display:        none;
   width:          950px;
   padding:        0;
